--- a/npm-audit.html
+++ b/npm-audit.html
@@ -55,7 +55,7 @@
                 <div class="card">
                     <div class="card-body">
                         <h5 class="card-title">
-                            July 18th 2020, 11:16:51 am
+                            August 31st 2020, 4:54:28 am
                         </h5>
                         <p class="card-text">Last updated</p>
                     </div>
