--- a/npm-audit.html
+++ b/npm-audit.html
@@ -55,7 +55,7 @@
                 <div class="card">
                     <div class="card-body">
                         <h5 class="card-title">
-                            November 22nd 2020, 11:11:32 am
+                            February 7th 2021, 7:50:35 pm
                         </h5>
                         <p class="card-text">Last updated</p>
                     </div>
